fix transition bug on IE10, IE11, Edge

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,7 +23,6 @@
 @mixin notification-animation($direction) {
     .notification {
         position:      relative;
-        #{$direction}: 0;
         transition:    opacity .4s, #{$direction} .4s;
         // Animations
         // enter animation (start)
